Fix Android 11 diagnostic compatibility and retain candidate-specific checks